version/0.3/_sources/api/ansys/fluent/mcp/solve/catalog/retriever/index.rst.txt






The ``retriever.py`` module
===========================

.. py:module:: ansys.fluent.mcp.solve.catalog.retriever


Summary
-------














.. py:currentmodule:: retriever
.. tab-set::




    .. tab-item:: Classes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.fluent.mcp.solve.catalog.retriever.ApiHit`
            - One ranked candidate returned by a retriever.


          * - :py:obj:`~ansys.fluent.mcp.solve.catalog.retriever.ApiRetriever`
            - ABC for an API retriever. Async by convention.


          * - :py:obj:`~ansys.fluent.mcp.solve.catalog.retriever.LexicalApiRetriever`
            - Thin async adapter over :class:`ApiIndex.search`.





    .. tab-item:: Functions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~get_default_api_retriever`
            - Return the default API retriever.


          * - :py:obj:`~set_default_api_retriever`
            - Test/integration hook to override the default.









.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-cod-symbol_class"></span> ApiHit</api/ansys/fluent/mcp/solve/catalog/retriever/ApiHit>
    <span class="nf nf-cod-symbol_class"></span> ApiRetriever</api/ansys/fluent/mcp/solve/catalog/retriever/ApiRetriever>
    <span class="nf nf-cod-symbol_class"></span> LexicalApiRetriever</api/ansys/fluent/mcp/solve/catalog/retriever/LexicalApiRetriever>









Description
-----------

API retrieval (RAG over the Fluent API catalog).

Only the lexical retriever is supported.

:class:`LexicalApiRetriever` is a thin async adapter over
:class:`~ansys.fluent.mcp.common.api_index.ApiIndex`, which scores the
bundled ``api_objects.json`` plus PyFluent class docstrings using BM25.
All ranking lives in :mod:`ansys.fluent.mcp.common.api_index`.

..
    !! processed by numpydoc !!






Module detail
-------------

.. py:function:: get_default_api_retriever() -> ApiRetriever

   
   Return the default API retriever.





   :Returns:

       :obj:`ApiRetriever`
           API retriever produced by the operation.











   ..
       !! processed by numpydoc !!

.. py:function:: set_default_api_retriever(retriever: Optional[ApiRetriever]) -> None

   
   Test/integration hook to override the default.


   :Parameters:

       **retriever** : :obj:`Optional`\[:obj:`ApiRetriever`]
           Retriever to supply to the function.



   :Returns:

       :data:`python:None`
           The function completes through its side effects.











   ..
       !! processed by numpydoc !!



